--- a/templates/taxi/car_list.html
+++ b/templates/taxi/car_list.html
@@ -1,10 +1,24 @@
 {% extends "base.html" %}
 {% block content %}
   <h1>Car List:</h1>
-  <ul>
-    {% for car in car_list %}
-      <li><a href="{{ car.get_absolute_url }}">{{ car.model }}</a></li>
-    {% endfor %}
-  </ul>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Model</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for car in car_list %}
+        <tr>
+          <td>
+            <a href="{{ car.get_absolute_url }}">{{ car.id }}</a>
+          </td>
+          <td>{{ car.model }}</td>
+        </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+
   <hr>
 {% endblock %}
