--- a/templates/taxi/manufacturer_list.html
+++ b/templates/taxi/manufacturer_list.html
@@ -1,10 +1,19 @@
 {% extends "base.html" %}
 {% block content %}
   <h1>Manufacturer List:</h1>
-  <ul>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>NAME</th>
+      </tr>
+    </thead>
     {% for manufacturer in manufacturer_list %}
-      <li>{{ manufacturer.name }}</li>
+    <tbody>
+      <tr>
+        <td>{{ manufacturer.name }}</td>
+      </tr>
+    </tbody>
     {% endfor %}
-  </ul>
+  </table>
   <hr>
 {% endblock %}
