--- a/templates/taxi/manufacturer_list.html
+++ b/templates/taxi/manufacturer_list.html
@@ -1,10 +1,22 @@
 {% extends "base.html" %}
 {% block content %}
   <h1>Manufacturer List:</h1>
-  <ul>
+  <table class="table">
+    <thead>
+    <tr>
+      <th>ID</th>
+      <th>NAME</th>
+      <th>COUNTRY</th>
+    </tr>
+    </thead>
+    <tbody>
     {% for manufacturer in manufacturer_list %}
-      <li>{{ manufacturer.name }}</li>
+      <tr>
+        <td>{{ manufacturer.id }}</td>
+        <td>{{ manufacturer.name }}</td>
+        <td>{{ manufacturer.country }}</td>
+      </tr>
     {% endfor %}
-  </ul>
-  <hr>
+    </tbody>
+  </table>
 {% endblock %}
